# valagame

./: .gitattributes  .gitignore  CMakeLists.1.txt  CMakeLists.backup.txt  CMakeLists.txt  build.bat  build.sh  component.json  configure  configure.bat  dev.sh  files  filesz  notes  notes.md  readme.md
assets/: assets.atlas
assets/fonts/: hud_0.dds
data/: CMakeLists.txt  resources.gresource.xml
docs/: index.data  index.js  index.wasm  index.wasm.pre
src/: Hello.java
src.atlas/assets/images/: assets.dds
src.atlas/assets/shaders/: sprite.frag
src.atlas/vala/component/: Background.vala  Velocity.vala
src.atlas/vala/entity/: EnemyTemplate.vala
src.atlas/vala/system/: CollisionSystem.vala  MovementSystem.vala  RenderSystem.vala  ScaleAnimationSystem.vala
src.atlas/vapis/: glfw3.vapi
src.ktl/: CMakeLists.txt  MetaSprite.xml  build.bat  files
src.ktl/assets/fonts/: tom-thumb-white.dds
src.ktl/vala/: KTL.SpriteBatch.vala  Main.vala
src.platformer/vala/: Coin.vala  TileMap.vala  VertexBatch.vala  VertexBatcher.vala  level.vala  main.vala  platformer.vala
src.shmupwarz/assets/images - Copy/: assets.dds  bang.dds  enemy1.dds  enemy2.dds  enemy3.dds  particle.dds  spaceshipspr.dds  star.dds
src.shmupwarz/vala/: Program.vala  Shmupwarz.vala  main.vala
src.shmupwarz/vala/component/: Bounds.vala  Sprite.vala
src.shmupwarz/vala/entity/: ExplosionTemplate.vala  PlayerTemplate.vala
src.shmupwarz/vala/system/: CollisionSystem.vala  ColorAnimationSystem.vala  EnemySystem.vala  InputSystem.vala  RemoveOffscreenSystem.vala
src.sprite/vala/: Program.vala  Shmupwarz.vala
src.sprite/vala/component/: Bullet.vala  Enemy.vala  Player.vala  Sprite.vala
src.sprite/vala/entity/: BackgroundTemplate.vala  ExplosionTemplate.vala  PlayerTemplate.vala
src.sprite/vala/system/: CollisionSystem.vala  EnemySystem.vala  ExpiringSystem.vala  InputSystem.vala  RemoveOffscreenSystem.vala  ScaleAnimationSystem.vala
src.spritebatch/assets/fonts/: normal.json
src.spritebatch/assets/images/: assets2.dds
src.spritebatch/vala/: Program.vala  Shmupwarz.vala
src.spritebatch/vala/component/: ColorAnimation.vala
src.spritebatch/vala/entity/: BackgroundTemplate.vala  PlayerTemplate.vala
src.spritebatch/vala/system/: EnemySystem.vala  RenderSystem.vala
src.zelda/: README.md
src.zelda/assets/: MetaSprite.json
src.zelda/assets/spr/Link/: Jump.dds  Run.dds  Stand.dds
src.zelda/vala/: Game.vala  Game.valaz  Program.vala
src.zelda/vala/ZeldaPlatformerLibrary/Components/: AABBComponent.vala  BinaryDirectionComponent.vala  ContentManagerComponent.vala  EventSenderComponent.vala  FSMComponent.vala  GoalSpeedComponent.vala  InputIntentComponent.vala  LinkIdleStateComponent.vala  LinkOnAirStateComponent.vala  LinkOnGroundStateComponent.vala  LinkRunStateComponent.vala  LinkWalkSpeedStateComponent.vala  LinkWalkStateComponent.vala  MapComponent.vala  PlayerInputComponent.vala  PositionComponent.vala  SpeedComponent.vala  SpriteComponent.vala
src.zelda/vala/ZeldaPlatformerLibrary/Systems/: LinkOnAirStateSystem.vala  LinkWalkStateSystem.vala  MapRenderSystem.vala  PlayerInputSystem.vala  SpeedSystem.vala  SpriteBinaryDirectionSystem.vala  SpriteRenderSystem.vala
src/Content/levels/: demo.level
src/Content/tiles/: d16a.dds
src/assets/: Test.json  Test.tmx  Tileset.dds
src/assets/fonts/: hud.json  normal_0.dds
src/assets/images - Copy/: background.dds  bullet.dds  explosion.dds
src/assets/spr/Link/: Attack.dds  Fall.dds  JumpFwd.dds  Skid.dds  Walk.dds
src/vala/: Coin.vala  Game.vala  KTL.SpriteBatch.1.vala  Main.vala  MetaSprite.vala  Program.vala  Shmupwarz.vala  StaticBatch.vala  TileMap.1.vala  TileMap.vala  TileMapBatch.vala  VertexBatch.vala  VertexBatchItem.vala  VertexBatcher.vala  VertexPositionTexture.vala  character.vala  coin.vala  level.vala  main.vala  platformer.1.vala  platformer.vala  tiletype.vala
src/vala.1/: Coin.vala  Level.vala  Platformer.vala  TileMap.vala  TileMapBatch.vala  VertexBatch.vala  VertexBatchItem.vala  VertexBatcher.vala
src/vala/ZeldaPlatformerLibrary/: AllSystems.vala
src/vala/ZeldaPlatformerLibrary/Components/: AABBComponent.vala  BinaryDirectionComponent.vala  EventSenderComponent.vala  InputIntentComponent.vala  LinkOnAirStateComponent.vala  LinkOnGroundStateComponent.vala  LinkWalkSpeedStateComponent.vala  LinkWalkStateComponent.vala  MapComponent.vala  PlayerInputComponent.vala
src/vala/ZeldaPlatformerLibrary/Systems/: GoalSpeedSystem.vala  LinkIdleStateSystem.vala  LinkOnGroundStateSystem.vala  LinkRunStateSystem.vala  MapCollisionSystem.vala  SpriteAnimationSystem.vala  SpriteSystem.vala
src/vala/component/: Bounds.vala  ColorAnimation.vala  Expires.vala  Factory.vala  Health.vala  Position.vala  PositionComponent.vala  Scale.vala  ScaleAnimation.vala  SoundEffect.vala  Sprite.vala  SpriteComponent.vala  Velocity.vala
src/vala/entity/: BackgroundTemplate.vala  BulletTemplate.vala  EnemyTemplate.vala  ExplosionTemplate.vala  ParticleTemplate.vala  PlayerTemplate.vala
src/vala/system/: CollisionSystem.vala  ColorAnimationSystem.vala  EnemySystem.vala  ExpiringSystem.vala  InputSystem.vala  MovementSystem.vala  RemoveOffscreenSystem.vala  RenderSystem.vala  ScaleAnimationSystem.vala  SoundEffectSystem.vala
src/vapis/: gl.vapi
www/: index.data  index.js  index.wasm.pre
